# 0.00.94 (65403) Jun 22, 2012
# 0.00.93 (65401) Jun 22, 2012
Build a Fraction: Animate out containers when the play area has none
Build a Fraction: Started new UI with a tool box for multiple piece sizes and a single container in the center that can be broken into different numbers of subdivisions
Build a Fraction: Added standalone app for build a fraction
Fraction Matcher: Expanded ninja star a little bit
Fraction Matcher: Added ninja star for level 8 and as a new representation
Fraction Matcher: Added ring of hexagons for level 7 and as a new representation
# 0.00.92 (65358) Jun 21, 2012
Build a Fraction: Pictures: Fixed: Bug: multiple pieces went into the same target box.
Build a Fraction: Pictures: Fixed: Split button should change cursor back to arrow after clicking.
Build a Fraction: Pictures: Fixed: Container shouldn't be draggable once in scoring cell.
# 0.00.91 (65322) Jun 19, 2012
Build a Fraction: Pictures: Containers animate back to the toolbox
Build a Fraction: Pictures: Pieces animate back to the bucket
Build a Fraction: Pictures: If all scored, then show smilie face and next button.
Build a Fraction: Pictures: Animate picture fractions into the scoring cells
Build a Fraction: Pictures: Targets light up when you have a match.
Build a Fraction: Pictures: Stack pieces in the bucket
Build a Fraction: Pictures: Show multiple pieces in the bucket, as determined by the level
Build a Fraction: Pictures: Spread out pieces horizontally when ejecting from a container
Build a Fraction: Pictures: Pieces "stack" in a container without overlapping.
Build a Fraction: Pictures: Break pieces out of container
Build a Fraction: Pictures: Snap pieces into container
Build a Fraction: Pictures: Removed "My fractions" text
Build a Fraction: Centered level indicator vertically, converted vertical layout to horizontal for scene selection toggle buttons
Build a Fraction: Pictures: Made level toolbar bar move independently for each scene
# 0.00.90 (65259) Jun 18, 2012